<resources>
    <string name="app_name">Namma-Nala</string>
    <string name="title_hint">Enter issue title</string>
    <string name="report_issue">Report Issue</string>
    <string name="view_reports">View Reports</string>
    <string name="submit">Submit</string>
    <string name="capture_image">Capture Image</string>
    <string name="get_location">Get Location</string>
    <string name="description_hint">Describe the issue...</string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>
    <string name="permission_denied">Permission Denied</string>
</resources>
